# behav3d_ws

./: .gitignore  README.md  RenderOption_2025-10-14-13-11-13.json  color_camera_info.yaml  command_format.md  custom_workcell+moveit_setup.md  frames_2025-07-21_17.09.30.gv  frames_2025-07-21_17.25.23.gv  handeye.py  handeye_result_final.json  imgui.ini  mesh_offset.py  reprojection_check.py  reprojection_report.txt  ros2.repos  test_gpu.py  tsdf_fusion.py  tsdf_fusion_w.py  tsdf_mesh_refined.stl  utils.py
.open3d_venv/: pyvenv.cfg
Python scripts/: charuco_viewer.py  handeye.py  handeye_v2.py  handeye_v2_ir.py
Python scripts/open3d_tests/: fuse_all_scans.py  fuse_all_scans_imp.py  tsdf_fusion.py  tsdf_fusion_lim.py
Python_scripts/: charuco_viewer_ir.py
Python_scripts/open3d_tests/: visualize_alignment.py
python_scripts/: README.md  charuco_viewer.py  handeye_v3.py  handeye_v3_ir.py  handeye_v3_ir_slider.py  test_utils.py  tsdf_fusion_w.py  validate_chain.py
python_scripts/3d_reconstruction/: TSDF_cpu_cropped.py  TSDF_cpu_object_extract.py  color_to_depth.py  colored_mesh_cpu.py  o3d_cpu_reconstruction.py  o3d_gpu_reconstruction.py
python_scripts/handeye_calibration/: handeye_v3.py  handeye_v3_ir.py  handeye_v3_ir_slider.py  handeye_v4.py  reprojection_check.py
python_scripts/open3d_tests/: cuda_test.py  fuse_depths_to_mesh.py  (+8 more)
src/: README.md
src/behav3d/: README.md  package.xml  setup.cfg  setup.py
src/behav3d/behav3d/: __init__.py  motion_controller.py  motion_visualizer.py  scan_trajectories.py  target_helpers.py
src/behav3d_bringup/: CMakeLists.txt  package.xml
src/behav3d_bringup/launch/: kinematics_ur20_demo.launch.py  one_shot_workcell_demo.launch.py  print_move.launch.py  system_bringup.launch.py  workcell_demo.launch.py
src/behav3d_commands/: README.md  package.xml  setup.cfg  setup.py
src/behav3d_commands/behav3d_commands/: __init__.py  api.py  command.py  print_session.py  queue.py  scan_session.py  session.py
src/behav3d_commands/behav3d_commands/motion_commands/: __init__.py  motion_commands.py
src/behav3d_commands/behav3d_commands/print_commands/: __init__.py  extruder_commands.py
src/behav3d_commands/behav3d_commands/sense_commands/: __init__.py  camera_commands.py
src/behav3d_commands/behav3d_commands/util_commands/: __init__.py  util_commands.py
src/behav3d_cpp/: CMakeLists.txt  package.xml
src/behav3d_cpp/include/behav3d_cpp/: camera_manager.hpp  handeye_calibration.hpp  motion_controller.hpp  motion_visualizer.hpp  session_manager.hpp  target_builder.hpp  trajectory_builder.hpp  util.hpp
src/behav3d_cpp/src/: camera_manager.cpp  handeye_calibration.cpp  motion_controller.cpp  motion_visualizer.cpp  session_manager.cpp  target_builder.cpp  trajectory_builder.cpp  util.cpp
src/behav3d_demo/: CMakeLists.txt  package.xml
src/behav3d_demo/behav3d_demo/: demo.cpp  mancap.cpp
src/behav3d_demo/launch/: behav3d_demo_launch.launch.py  behav3d_ur10e_demo.launch.py  behav3d_ur20_demo.launch.py  mancap_ur20.launch.py
src/behav3d_examples/: package.xml  setup.cfg  setup.py
src/behav3d_examples/behav3d_examples/: __init__.py  custom_sequence.py  move_and_print_test.py  print_session.py  scan_session.py
src/behav3d_examples/behav3d_examples/src/: __init__.py  custom_session.py
src/behav3d_examples/resource/: behav3d_examples
src/behav3d_interfaces/: CMakeLists.txt  package.xml
src/behav3d_interfaces/action/: PlanAndExecute.action  PrintSteps.action  PrintTime.action
src/behav3d_interfaces/srv/: Abort.srv  Capture.srv  CaptureRGBD.srv  CaptureSnapshot.srv  ComputeHandEye.srv  GetLinkPose.srv  GetPrintStatus.srv  PlanCartesianPath.srv  PlanPilzLin.srv  PlanPilzPtp.srv  PlanPilzSequence.srv  PlanWithMoveIt.srv  ReconstructMesh.srv  UpdatePrintConfig.srv
src/behav3d_motion_bridge/: CMakeLists.txt  package.xml
src/behav3d_motion_bridge/launch/: bridge_panda.launch.py  bridge_workcell.launch.py  minimal_move_group_ompl.launch.py  ompl_minimal.yaml  ompl_only.yaml  panda_move_group.launch.py
src/behav3d_motion_bridge/src/: motion_bridge_node.cpp
src/behav3d_orchestrator/: package.xml  setup.cfg  setup.py
src/behav3d_orchestrator/behav3d_orchestrator/: orchestrator_node.py
src/behav3d_print/: package.xml  setup.cfg  setup.py
src/behav3d_print/behav3d_print/: __init__.py  print_node.py
src/behav3d_sense/: package.xml  setup.cfg  setup.py
src/behav3d_sense/behav3d_sense/: 3dreconstruct.py  femto_capture.py  reconstruction.py  sense_node.py
src/behav3d_vision/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/behav3d_vision/behav3d_vision/: image_processor.py  pose_sequence_runner.py  rgbd_capture.py
src/behav3d_vision/launch/: image_processor.launch.py  rgbd_capture.launch.py
src/behav3d_vision/resource/: behav3d_vision
src/handeye_calibration/: CMakeLists.txt  handeye_main.cpp  package.xml
src/handeye_calibration/handeye_calibration/: demo.cpp
src/handeye_calibration/launch/: handeye_calibration.launch.py
src/handeye_calibration_cpp/: CMakeLists.txt  package.xml
src/handeye_calibration_cpp/handeye_calibration_cpp/: main.cpp
src/handeye_calibration_cpp/launch/: handeye_calibration.launch.py
src/kinematics_demo_cpp/: CMakeLists.txt  package.xml
src/kinematics_demo_cpp/kinematics_demo_cpp/: demo.cpp
src/kinematics_demo_cpp/launch/: kinematics_demo_launch.launch.py  kinematics_demo_ur20.launch.py  kinematics_ur20_demo.launch.py
src/motion_visualizer/: package.xml  setup.cfg  setup.py
src/motion_visualizer/motion_visualizer/: visualizer.py
src/pilz_demo/: package.xml  setup.cfg  setup.py
src/pilz_demo/config/: pilz_demo.yaml
src/pilz_demo/launch/: pilz_demo_launch.launch.py
src/pilz_demo/pilz_demo/: demo.py
src/viz_demo/: CMakeLists.txt  package.xml
src/viz_demo/launch/: move_group.launch.py  move_group.rviz  move_group_interface_tutorial.launch.py
src/viz_demo/src/: demo.cpp
src/world_visualizer/: package.xml  setup.cfg  setup.py
src/world_visualizer/launch/: mesh_visualizer.launch.py
src/world_visualizer/world_visualizer/: mesh_visualizer.py
(+141 files in other folders)
