<?xml version="1.0"?>
<package format="3">
  <name>behav3d_bringup</name>
  <version>0.1.0</version>
  <description>Bringup for Behav3D orchestrator.</description>
  <maintainer email="you@example.com">behav3d</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>behav3d_orchestrator</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
