<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behav3d_commands</name>
  <version>0.0.0</version>
  <description>Command interface for Behav3D systems</description>
  <maintainer email="ozca@iti.sdu.dk">Özgüç Bertuğ Çapunaman</maintainer>
  <maintainer email="jomi@iti.sdu.dk">Joseph Milad Wadie Naguib</maintainer>
  <maintainer email="luh@iti.sdu.dk">Lucas Helle</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <!-- <exec_depend>moveit_py</exec_depend> -->
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>handeye_interfaces</exec_depend> 
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <!-- Test / lint -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>
  <depend>behav3d_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
