[metadata]
name = behav3d_commands
version = 0.0.1
description = Command interface for Behav3D systems

[options]
packages = find:
install_requires =
    rclpy
    moveit_msgs
    geometry_msgs
    std_msgs
[develop]
script_dir=$base/lib/behav3d_commands
[install]
install_scripts=$base/lib/behav3d_commands