<package format="3">
  <name>behav3d_demo</name>
  <version>0.1.0</version>
  <description>Demo node showcasing PilzMotionController usage.</description>
  <maintainer email="ozca@iti.sdu.dk">Özgüç Bertuğ Çapunaman</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>behav3d_cpp</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
