<?xml version="1.0"?>
<package format="3">
  <name>behav3d_examples</name>
  <version>0.0.1</version>
  <description>Example sessions built on behav3d_commands.</description>

  <maintainer email="lab@iti.sdu.dk">Behav3D Lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <depend>behav3d_commands</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
