<?xml version="1.0"?>
<package format="3">
  <name>behav3d_interfaces</name>
  <version>0.1.0</version>
  <description>Interfaces for on-demand hand-eye computation</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
