<?xml version="1.0"?>
<package format="3">
  <name>behav3d_interfaces</name>
  <version>0.1.0</version>
  <description>Behav3D interfaces (actions and services) for ROS 2.</description>

  <maintainer email="you@example.com">behav3d</maintainer>
  <license>MIT</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
   
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
