<?xml version="1.0"?>
<package format="3">
  <name>behav3d_motion_bridge</name>
  <version>0.1.0</version>
  <description>MoveIt C++ bridge service for Behav3D.</description>
  <maintainer email="you@example.com">behav3d</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <depend>behav3d_interfaces</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>visualization_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
