<?xml version="1.0" encoding="utf-8"?>
<package format="3">
  <name>behav3d_orchestrator</name>
  <version>0.1.0</version>
  <description>Behav3D orchestrator </description>

  <maintainer email="you@example.com">behav3d</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>


  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>
  
  <depend>control_msgs</depend>
  <depend>behav3d_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>