<?xml version="1.0"?>
<package format="3">
  <name>behav3d_vision</name>
  <version>0.1.0</version>
  <description>RGB-D capture/processing (MVP)</description>
  <maintainer email="you@example.com">behav3d</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>



  <exec_depend>rclpy</exec_depend>

  <!-- Runtime deps -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <depend>behav3d_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  
</package>



