[metadata]
name = behav3d_vision
version = 0.0.1
description = Core Python library for behav3d: motion controller, visualizer, scan trajectories, and target helpers.

[options]
packages = find:
install_requires =
    rclpy
    moveit_msgs
    geometry_msgs
    std_msgs
[develop]
script_dir=$base/lib/behav3d_vision
[install]
install_scripts=$base/lib/behav3d_vision