<?xml version="1.0"?>
<package format="3">
  <name>handeye_calibration_cpp</name>
  <version>0.1.0</version>
  <description>Standalone CLI node to run behav3d hand-eye calibration.</description>

  <maintainer email="ozca@iti.sdu.dk">Özgüç Bertuğ Çapunaman</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behav3d_cpp</depend>
  
  <!-- OpenCV is typically brought in transitively via behav3d_cpp, but keep as a direct dep -->
  <exec_depend>opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>