
<?xml version="0.0.1"?>
<package format="3">
  <!-- Identity -->
  <name>motion_visualizer</name>
  <version>0.1.0</version>
  <description>
    Publishes DisplayTrajectory and MarkerArray messages so planned robot
    motions appear as animated ghosts, trails and target axes in RViz.
  </description>

  <!-- Maintainers -->
  <maintainer email="ozca@iti.sdu.dk">Özgüç Bertuğ Çapunaman</maintainer>
  <maintainer email="jomi@iti.sdu.dk">Joseph Milad Wadie Naguib</maintainer>
  <maintainer email="luh@iti.sdu.dk">Lucas José Helle</maintainer>

  <!-- Licence -->
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- Export for ament -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>