[metadata]
name = pilz_demo
version = 0.0.1
description = Interactive demo that converts text commands into Pilz‑planned motions and visualises them.

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    geometry_msgs
    pilz_motion_controller
    motion_visualizer

[options.entry_points]
console_scripts =
    demo = pilz_demo.demo:main
