<package format="3">
  <name>viz_demo</name>
  <version>0.0.1</version>
  <description>Demo package for MoveIt visualization</description>
  <maintainer email="lucas@example.com">Lucas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

<buildtool_depend>ament_cmake</buildtool_depend>
<depend>rclcpp</depend>
<depend>moveit_ros_planning_interface</depend>
<depend>moveit_visual_tools</depend>
<depend>moveit_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
